@@ -5,6 +5,8 @@ Version 1.4.3.0
 Fixed Bugs:
 - Fixed Metronome sending invalid LinearCmd for fast BPMs.
 - Implemented bounds checking on the client side for commands.
+- Fixed a stack owerflow when waiting for a connector connection that is
+  already attempting a connection, but runs into timeout.
 
 =================
 Version 1.4.2.0
